Migrate from heyapi client to heyapi sdk, revised colors
